# rts_game

./: Cargo.toml  todo.txt
assets/: physics_camera_test_scene.glb  physics_camera_test_scene.gltf
assets/meshes/: base.gltf  marine.glb  tank.glb
src/: assets.rs  camera.rs  combat.rs  common.rs  gamestates.rs  input_handling.rs  main.rs  player.rs  ui.rs  utils.rs
src/assets/: tank.glb
src/buildings/: barracks.rs  base.rs  building_grid.rs  building_types.rs  buildings.ron  buildings.rs  common.rs  events.rs  mod.rs
src/levels/: mod.rs  sandbox_lvl.rs
src/maps/: mod.rs  sandbox_map.rs
src/units/: common.rs  events.rs  mod.rs  tank.rs  unit_types.rs  units.ron  units.rs
