[package]
name = "rts_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: remove dynamic features before release!!!
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_mod_picking = "0.10.0"
bevy_rapier3d = {version = "0.20.0", features= ["debug-render"]}
bevy-inspector-egui = "0.14.0"
bevy-inspector-egui-rapier = {version = "0.9.0", features = ["rapier3d"]}
serde = "1.0.152"
ron = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
